# graphics-workshop

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: compile_shaders_to_spirv.bat  download_spirv_compiler.bat  solid_color.frag  solid_color.vert
workshop/: CMakeLists.txt  main.cpp
